FIX: primary center hand shift

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -60,6 +60,7 @@
 
   &__center {
     position: absolute;
+    background-color: #010101;
     width: 5px;
     height: 5px;
     border-radius: 50%;
